Split the docs: README for players, DEV.md for everything else
The README had grown into a mix of the two -- module licences and the
Jasione ASM warning next to build instructions, source-set layout and six
checker invocations. Someone who just wants to play should not have to
read past the branch table to find out what to install.

README now answers what each jar does for you, how to install and
configure it, what to do when something misbehaves, and which JVM flags
pair well. DEV.md takes the branches, build, module composition, loader
source sets, verification tooling and the history (Modernica, dropped
dependencies).

Also corrects two things that had gone stale: the module table still said
three jars when there are five, and duty-server still described itself as
only doing /locate when it now carries redstone, the network pipeline and
async saving. The mixin config comment still explained a BiomeMixinPlugin
that no longer exists.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>